org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
/* ... */
ToolBar[BORDER] {
  border: 1px solid #a4a4a4;
  border-radius: 2px;
}
ToolItem {
  color: inherit;
  background-color: transparent;
  background-image: none;
  border: none;
  border-radius: 0px;
  padding: 2px 3px;
  spacing: 4px;
  opacity: 1;
  animation: none;
}
ToolItem[FLAT] {
  border: none;
  padding: 3px 4px;
}
ToolItem:hover {
  background-color: #ffffff;
  border: 1px solid #a4a4a4;
  border-radius: 2px 2px 2px 2px;
  padding: 2px 3px;
}
ToolItem:pressed,
ToolItem:selected {
  border: 1px solid #a4a4a4;
  border-radius: 2px;
  padding: 3px 2px 1px 4px;
  background-image: url(theme/img/dotted_white.gif);
}
ToolItem-DropDownIcon {
  background-image: url(theme/img/arrows/down.gif);
  border: none;
}
ToolItem-DropDownIcon:hover {
  border: 1px inset;
}
ToolItem-Separator {
  width: 4px;
}
Composite.viewsArea {
  background-color: #ffffff;
  padding: 3px 3px 3px 3px;
}
Composite.viewPart {
  background-color: transparent;
  border: 1px solid #bbcddb;
  border-radius: 8px 8px 0px 0px;
}
Composite.viewPartNoRadius {
  background-color: transparent;
  border: 1px solid #bbcddb;
  border-radius: 0px 0px 0px 0px;
}
Composite.form {
  background-color: transparent;
}
Composite.listbox {
  background-color: #ffffff;
  border: 1px solid #95b7c1;
  border-radius: 4px;
  padding: 2px;
}
Composite.listboxDisabled {
  background-color: #ffffff;
  border: 1px solid #c9dadf;
  border-radius: 4px;
  padding: 2px;
}
Composite.formbarContainer {
  background-color: #ddebf4;
}
Button.formButton {
  background-image: none;
  color: #000000;
  padding: 6px 15px;
}
Button.formButton:selected,
Button.formButton:selected:hover,
Button.formButton:pressed,
Button.formButton:hover {
  background-image: none;
}
Button.formButton-active {
  background-image: none;
  background-color: #f1f7fb;
  border-radius: 0px 0px 5px 5px;
  color: #000000;
  padding: 0px 15px;
}
Button-FocusIndicator.formButton-active {
  border: none;
}
Button.formButton-active:pressed,
Button.formButton-active:selected,
Button.formButton-active:selected:hover,
Button.formButton-active:hover {
  background-image: none;
}
/* generated at http://www.ajaxload.info */
Composite.busyIndicator {
  padding: 8px;
  background-image: url(theme/img/busy/busy.gif);
}
/* Button */
Button {
  cursor: default;
  color: #ffffff;
  font: bold 14px Arial, Helvetica, sans-serif;
  background-color: transparent;
}
Button[PUSH],
Button[TOGGLE],
Button[BORDER] {
  background-image: gradient(linear, left top, left bottom, from(#7ab9dd), to(#67a8ce));
  color: #ffffff;
  animation: hoverOut 500ms ease-out;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px 5px;
}
Button[PUSH]:disabled,
Button[TOGGLE]:disabled {
  background-image: gradient(linear, left top, left bottom, from(#dee1e7), to(#c2d4de));
  cursor: default;
  color: #6B7B84;
  background-color: transparent;
}
Button[PUSH]:hover,
Button[TOGGLE]:hover {
  background-image: gradient(linear, left top, left bottom, from(#55aedb), to(#489aca));
}
Button[PUSH]:pressed,
Button[TOGGLE]:pressed {
  animation: none;
}
Button-FocusIndicator[PUSH],
Button-FocusIndicator[TOGGLE] {
  /* XXX hstaudacher we need to add a border radius when bug 346436 is fixed */

  background-color: transparent;
  border: 1px solid #b0cce3;
  margin: 1px;
  padding: 0px;
  opacity: 1;
}
Button[TOGGLE]:selected {
  background-image: gradient(linear, left top, left bottom, from(#4b8cbd), color-stop(35%, #65a5cf), color-stop(75%, #6bacd1), to(#67a8ce));
}
Button[TOGGLE]:selected:disabled {
  background-image: gradient(linear, left top, left bottom, from(#9ebcd1), color-stop(35%, #c4d6e0), color-stop(75%, #c8d9e1), to(#c2d4de));
  cursor: default;
  color: #ffffff;
  background-color: transparent;
}
Button[TOGGLE]:selected:hover {
  background-image: gradient(linear, left top, left bottom, from(#347ab8), color-stop(35%, #4797cc), color-stop(75%, #4b9fce), to(#489aca));
}
/* Link */
Link-Hyperlink {
  /* XXX hstaudacher Theme text decorator when bug 346438 is fixed */

  color: red;
}
Link-Hyperlink:disabled {
  color: #2a5a76;
}
/*Datefield*/
Composite.datefield {
  padding: 0px 0px 0px 0px;
  border: 1px solid #95b7c1;
  border-radius: 4px;
}
Composite.datefield-disabled {
  padding: 0px 0px 0px 0px;
  border: 1px solid #c9dadf;
  border-radius: 4px;
}
Text.datefield {
  border-radius: 4px;
  background-image: none;
  background-color: transparent;
}
Text.datefield:disabled {
  background-color: #f4f8fc;
}
Text.datefield[BORDER]:disabled {
  background-color: #f4f8fc;
}
Button.datefield {
  background-image: url(theme/img/button/datefield_date.png);
  border-radius: 5px;
  border: none;
}
Button.datefield:selected {
  background-image: url(theme/img/button/datefield_date_selected.png);
  border: none;
}
Button.datefield:disabled {
  background-image: url(theme/img/button/datefield_date_disabled.png);
  border: none;
}
Button.datefield:hover {
  background-image: url(theme/img/button/datefield_date_mouse_over.png);
  border: none;
}
/* DateChooserDialog */
Shell.datechooser-dialog {
  border: 2px solid #67a8ce;
  border-radius: 0px;
  background-color: #f4f8fc;
}
Composite.datechooser-dialog {
  background-color: transparent;
}
Label.datechooser-dialog {
  background-color: #f4f8fc;
  font: bold 14px Arial, Helvetica, sans-serif;
}
Table.datechooser-dialog {
  background-color: #f4f8fc;
}
Table-GridLine.datechooser-dialog:vertical {
  /* XXX hstaudacher: This comment can be removed when bug 347755 is fixed.
   At the moment the Gridline styling does not work and the datechooser has
   white vertical gridlines instead of none
 */

  color: #f4f8fc;
}
TableColumn.datechooser-dialog {
  background-image: none;
  background-color: transparent;
  font: bold 14px Arial, Helvetica, sans-serif;
  color: #000000;
}
Button.datechooser-dialog-last-year,
Button.datechooser-dialog-last-year:hover {
  background-image: url(theme/img/datetime/last-year.png);
  border-radius: 5px;
  border: none;
}
/* ... */

